Fix a problem that the height of the dialogs was to small on Safari

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -247,7 +247,7 @@ md-dialog button {
 
 /*// Dialog for Save and New*/
 .ModalDialog-dialog {
-
+  min-height: 243px;
 }
 
 .ModalDialog-content {
